(1) Inicios de 3D.Art

--- a/index.html
+++ b/index.html
@@ -3,9 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Galeria</title>
+    <title>Iconos del Arte en 3D</title>
+
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    
+    <header>
+        <nav class="navbar container">
+            <picture class="navbar__logo">
+                <a href="index.html"><img src="./img/1.Icono/Isologo.png" alt="Isologo">3D.ART</a>
+            </picture>
+            <ul class="navbar__menu">
+                <li class="navbar__item">
+                    <a class="navbar__link" href="./index.html">Home</a>
+                </li>
+                <li class="navbar__item">
+                    <a class="navbar__link" href="">Galery</a>
+                </li>
+                <li class="navbar__item">
+                    <a class="navbar__link" href="">Info</a>
+                </li>
+                <li class="navbar__item">
+                    <a class="navbar__link" href="">Fountain</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <div>
+        <section>
+            <article>
+                <h3>Sean Bienvenidos</h3>
+                <p>A esta Galeria de iconos artisticos transformada por Inteligencia Artificial</p>
+            </article>
+            <article>
+                <img src="" alt="">
+            </article>
+        </section>
+    </div>
+
+    <main class="container">
+        
+    </main>
 </body>
 </html>
