--- a/index.html
+++ b/index.html
@@ -17,8 +17,25 @@
                 <li class="navbar__item">
                     <a class="navbar__link" href="./index.html">Home</a>
                 </li>
-                <li class="navbar__item">
-                    <a class="navbar__link" href="">Galery</a>
+                <li class="navbar__item with-submenu">
+                    <a class="navbar__link with-icon" href="">Galery<iconify-icon icon="ci:chevron-down"></iconify-icon></a>
+                    <ul class="submenu">
+                        <li class="submenu__item">
+                            <a href="" class="submenu__link">Claude Monet</a>
+                        </li>
+                        <li class="submenu__item">
+                            <a href="" class="submenu__link">Francisco de Goya</a>
+                        </li>
+                        <li class="submenu__item">
+                            <a href="" class="submenu__link">Pablo Picasso</a>
+                        </li>
+                        <li class="submenu__item">
+                            <a href="" class="submenu__link">Salvador Dale</a>
+                        </li>
+                        <li class="submenu__item">
+                            <a href="" class="submenu__link">Vincent Van Gogh</a>
+                        </li>
+                    </ul>
                 </li>
                 <li class="navbar__item">
                     <a class="navbar__link" href="">Info</a>
@@ -45,5 +62,7 @@
     <main class="container">
         
     </main>
+
+    <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 </body>
 </html>
