(3) Creación del Banner

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header>
+    <header> <!-- ==================== INICIO DEL HEADER ==================== -->
         <nav class="navbar container">
             <picture class="navbar__logo">
                 <a href="index.html"><img src="./img/1.Icono/Isologo.png" alt="Isologo">3D.ART</a>
@@ -45,19 +45,17 @@
                 </li>
             </ul>
         </nav>
-    </header>
+    </header> <!-- ==================== FIN DEL HEADER ==================== -->
 
-    <div>
-        <section>
-            <article>
-                <h3>Sean Bienvenidos</h3>
-                <p>A esta Galeria de iconos artisticos transformada por Inteligencia Artificial</p>
-            </article>
-            <article>
-                <img src="" alt="">
+    <div> <!-- ==================== INICIO DEL BANNER ==================== -->
+        <section class="banner">
+            <article class="banner__content container">
+                <h3 class="banner__title">Sean Bienvenidos</h3>
+                <p class="banner__text">A esta Galeria de iconos artisticos transformada por Inteligencia Artificial</p>
+                <a class="banner__link" href="">GALERIA</a>
             </article>
         </section>
-    </div>
+    </div> <!-- ==================== FIN DEL BANNER ==================== -->
 
     <main class="container">
         
