--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <a class="navbar__link" href="./index.html">Home</a>
                 </li>
                 <li class="navbar__item with-submenu">
-                    <a class="navbar__link with-icon" href="">Galery<iconify-icon icon="ci:chevron-down"></iconify-icon></a>
+                    <a class="navbar__link with-icon" href="">Gallery<iconify-icon icon="ci:chevron-down"></iconify-icon></a>
                     <ul class="submenu">
                         <li class="submenu__item">
                             <a href="" class="submenu__link">Claude Monet</a>
