(5) Modificacion del Main y otras cosas

--- a/index.html
+++ b/index.html
@@ -58,7 +58,55 @@
     </div> <!-- ==================== FIN DEL BANNER ==================== -->
 
     <main class="container">
-        
+        <section class="contenedor__cartas">
+            <article class="seleccionador__cartas">
+                <div class="carta">
+                    <figure>
+                        <img class="carta__img" src="./img/Claude Monet/Autorretrato.jpeg" alt="">
+                    </figure>
+                    <div class="carta__content">
+                        <h3 class="carta__title"><a href="">Claude Monet</a></h3>
+                        <p>Claude Monet fue un pintor francés, uno de los creadores del impresionismo. El término impresionismo deriva del título de su obra Impresión, sol naciente. Sus primeras obras, hasta la mitad de la década de 1860, son de estilo realista. Monet logró exponer algunas en el Salón de París.</p>
+                    </div>
+                </div>
+                <div class="carta">
+                    <figure>
+                        <img class="carta__img" src="./img/Francisco de Goya/Autorretrato.jpeg" alt="">
+                    </figure>
+                    <div class="carta__content">
+                        <h3 class="carta__title"><a href="">Francisco de Goya</a></h3>
+                        <p>Francisco José de Goya y Lucientes fue un pintor y grabador español. Su obra abarca la pintura de caballete y mural, el grabado y el dibujo.</p>
+                    </div>
+                </div>
+                <div class="carta">
+                    <figure>
+                        <img class="carta__img" src="./img/Pablo Picasso/Autorretrato.jpeg" alt="">
+                    </figure>
+                    <div class="carta__content">
+                        <h3 class="carta__title"><a href="">Plablo Picasso</a></h3>
+                        <p>Pablo Ruiz Picasso fue un pintor y escultor español, creador, junto con Georges Braque, del cubismo.</p>
+                    </div>
+                </div>
+                <div class="carta">
+                    <figure>
+                        <img class="carta__img" src="./img/Salvador Dale/Autorretrato.jpeg" alt="">
+                    </figure>
+                    <div class="carta__content">
+                        <h3 class="carta__title"><a href="">Salvador Dale</a></h3>
+                        <p>Salvador Domingo Felipe Jacinto Dalí i Domènech, marqués de Dalí de Púbol fue un pintor, escultor, grabador, escenógrafo y escritor español del siglo XX. Se le considera uno de los máximos representantes del surrealismo. Salvador Dalí es conocido por sus impactantes y oníricas imágenes surrealistas.</p>
+                    </div>
+                </div>
+                <div class="carta">
+                    <figure>
+                        <img class="carta__img" src="./img/Van Gogh/Autoretrato.jpeg" alt="">
+                    </figure>
+                    <div class="carta__content">
+                        <h3 class="carta__title"><a href="">Vincent Van Gogh</a></h3>
+                        <p>Vincent Willem van Gogh fue un pintor neerlandés, uno de los principales exponentes del postimpresionismo.Pintó unos 800 cuadros y realizó más de 1600 dibujos. Una figura central en su vida fue su hermano menor Theo, marchante de arte en París, quien le prestó apoyo financiero de manera continua y desinteresada.</p>
+                    </div>
+                </div>
+            </article>
+        </section>
     </main>
 
     <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
