Agregado de los Link a otras paginas

--- a/index.html
+++ b/index.html
@@ -18,22 +18,22 @@
                     <a class="navbar__link" href="./index.html">Home</a>
                 </li>
                 <li class="navbar__item with-submenu">
-                    <a class="navbar__link with-icon" href="">Gallery<iconify-icon icon="ci:chevron-down"></iconify-icon></a>
+                    <a class="navbar__link with-icon" href="./page/gallery.html">Gallery<iconify-icon icon="ci:chevron-down"></iconify-icon></a>
                     <ul class="submenu">
                         <li class="submenu__item">
-                            <a href="" class="submenu__link">Claude Monet</a>
+                            <a href="./page/artist/Claude_Monet.html" class="submenu__link">Claude Monet</a>
                         </li>
                         <li class="submenu__item">
-                            <a href="" class="submenu__link">Francisco de Goya</a>
+                            <a href="./page/artist/Francisco_de_Goya.html" class="submenu__link">Francisco de Goya</a>
                         </li>
                         <li class="submenu__item">
-                            <a href="" class="submenu__link">Pablo Picasso</a>
+                            <a href="./page/artist/Pablo_Picasso.html" class="submenu__link">Pablo Picasso</a>
                         </li>
                         <li class="submenu__item">
-                            <a href="" class="submenu__link">Salvador Dale</a>
+                            <a href="./page/artist/Salvador_Dale.html" class="submenu__link">Salvador Dale</a>
                         </li>
                         <li class="submenu__item">
-                            <a href="" class="submenu__link">Vincent Van Gogh</a>
+                            <a href="./page/artist/Vincent_Van_Gogh.html" class="submenu__link">Vincent Van Gogh</a>
                         </li>
                     </ul>
                 </li>
@@ -65,8 +65,8 @@
                         <img class="carta__img" src="./img/Claude Monet/Autorretrato.jpeg" alt="">
                     </figure>
                     <div class="carta__content">
-                        <h4 class="carta__title"><a href="">Claude Monet</a></h4>
-                        <p>Claude Monet fue un pintor francés, uno de los creadores del impresionismo. El término impresionismo deriva del título de su obra Impresión, sol naciente. Sus primeras obras, hasta la mitad de la década de 1860, son de estilo realista. Monet logró exponer algunas en el Salón de París.</p>
+                        <h4 class="carta__title"><a href="./page/artist/Claude_Monet.html">Claude Monet</a></h4>
+                        <p class="carta__text">Claude Monet fue un pintor francés, uno de los creadores del impresionismo. El término impresionismo deriva del título de su obra Impresión, sol naciente. Sus primeras obras, hasta la mitad de la década de 1860, son de estilo realista. Monet logró exponer algunas en el Salón de París.</p>
                     </div>
                 </div>
                 <div class="carta">
@@ -74,8 +74,8 @@
                         <img class="carta__img" src="./img/Francisco de Goya/Autorretrato.jpeg" alt="">
                     </figure>
                     <div class="carta__content">
-                        <h4 class="carta__title"><a href="">Francisco de Goya</a></h4>
-                        <p>Francisco José de Goya y Lucientes fue un pintor y grabador español. Su obra abarca la pintura de caballete y mural, el grabado y el dibujo.</p>
+                        <h4 class="carta__title"><a href="./page/artist/Francisco_de_Goya.html">Francisco de Goya</a></h4>
+                        <p class="carta__text">Francisco José de Goya y Lucientes fue un pintor y grabador español. Su obra abarca la pintura de caballete y mural, el grabado y el dibujo.</p>
                     </div>
                 </div>
                 <div class="carta">
@@ -83,8 +83,8 @@
                         <img class="carta__img" src="./img/Pablo Picasso/Autorretrato.jpeg" alt="">
                     </figure>
                     <div class="carta__content">
-                        <h4 class="carta__title"><a href="">Plablo Picasso</a></h4>
-                        <p>Pablo Ruiz Picasso fue un pintor y escultor español, creador, junto con Georges Braque, del cubismo.</p>
+                        <h4 class="carta__title"><a href="./page/artist/Pablo_Picasso.html">Plablo Picasso</a></h4>
+                        <p class="carta__text">Pablo Ruiz Picasso fue un pintor y escultor español, creador, junto con Georges Braque, del cubismo.</p>
                     </div>
                 </div>
                 <div class="carta">
@@ -92,8 +92,8 @@
                         <img class="carta__img" src="./img/Salvador Dale/Autorretrato.jpeg" alt="">
                     </figure>
                     <div class="carta__content">
-                        <h4 class="carta__title"><a href="">Salvador Dale</a></h4>
-                        <p>Salvador Domingo Felipe Jacinto Dalí i Domènech, marqués de Dalí de Púbol fue un pintor, escultor, grabador, escenógrafo y escritor español del siglo XX. Se le considera uno de los máximos representantes del surrealismo. Salvador Dalí es conocido por sus impactantes y oníricas imágenes surrealistas.</p>
+                        <h4 class="carta__title"><a href="./page/artist/Salvador_Dale.html">Salvador Dale</a></h4>
+                        <p class="carta__text">Salvador Domingo Felipe Jacinto Dalí i Domènech, marqués de Dalí de Púbol fue un pintor, escultor, grabador, escenógrafo y escritor español del siglo XX. Se le considera uno de los máximos representantes del surrealismo. Salvador Dalí es conocido por sus impactantes y oníricas imágenes surrealistas.</p>
                     </div>
                 </div>
                 <div class="carta">
@@ -101,7 +101,7 @@
                         <img class="carta__img" src="./img/Van Gogh/Autoretrato.jpeg" alt="">
                     </figure>
                     <div class="carta__content">
-                        <h4 class="carta__title"><a href="">Vincent Van Gogh</a></h4>
+                        <h4 class="carta__title"><a href="./page/artist/Vincent_Van_Gogh.html">Vincent Van Gogh</a></h4>
                         <p class="carta__text">Vincent Willem van Gogh fue un pintor neerlandés, uno de los principales exponentes del postimpresionismo.Pintó unos 800 cuadros y realizó más de 1600 dibujos. Una figura central en su vida fue su hermano menor Theo, marchante de arte en París, quien le prestó apoyo financiero de manera continua y desinteresada.</p>
                     </div>
                 </div>
@@ -109,20 +109,20 @@
         </section>
     </main> <!-- ==================== INICIO DEL MAIN ==================== -->
 
-    <footer class="footer"> <!-- ==================== INICIO DEL FOOTER ==================== --><!-- Pie de Pagina --><!-- Pie de Pagina -->
+    <footer class="footer"> <!-- ==================== INICIO DEL FOOTER ==================== -->
             <nav class="navbar container">
                 <ul class="navbar__item">
                     <li class="navbar__item">
-                        <a class="navbar__link" href="./pages/shop.html">ARTISTAS</a>
+                        <a class="navbar__link" href="">ARTISTS</a>
                     </li>
                     <li class="navbar__item">
-                        <a class="navbar__link" href="./pages/register.html">INFO</a>
+                        <a class="navbar__link" href="">INFO</a>
                     </li>
                     <li class="navbar__item">
-                        <a class="navbar__link" href="./pages/login.html">DESTACADOS</a>
+                        <a class="navbar__link" href="">FOUNTAIN</a>
                     </li>
                     <li class="navbar__item">
-                        <a class="navbar__link" href="./pages/contact.html">CONTACTO</a>
+                        <a class="navbar__link" href="">CONTACT</a>
                     </li>
                 </ul>
                 <picture>
